# ebook-rag

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  ebook_rag_project_spec.md  package-lock.json  package.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260306_0001_initial_schema.py  20260307_0002_configurable_embedding_dimensions.py  20260307_0003_chunking_metadata.py
apps/api/benchmarks/: amazon_earnings_eval.json  citation_granularity_eval.json  curated_eval.json  gpt_5_4_thinking_card_eval.json  hells_angels_eval.json  infinite_jest_eval.json  john_deere_mower_manual_eval.json  qwen3_technical_report_eval.json  regression_suite.json  sample_eval.json
apps/api/benchmarks/results/: gpt_5_4_thinking_card_baseline_20260308.json  gpt_5_4_thinking_card_baseline_20260308.md  john_deere_mower_manual_baseline_20260308.json  john_deere_mower_manual_baseline_20260308.md  qwen3_technical_report_baseline_20260308.json  qwen3_technical_report_baseline_20260308.md
apps/api/scripts/: run_eval.py  run_regression_suite.py
apps/api/src/ebook_rag_api/: __init__.py  main.py
apps/api/src/ebook_rag_api/api/: router.py
apps/api/src/ebook_rag_api/core/: config.py
apps/api/src/ebook_rag_api/db/: __init__.py  session.py  vector.py
apps/api/tests/: conftest.py  test_chunking.py  test_documents.py  test_embedding_provider.py  test_eval_script.py  test_extraction.py  test_health.py  test_qa.py  test_qa_provider.py  test_reranking.py  test_retrieval.py
(+31 files in other folders)
